Updated npm packages; fixed toast on mobile; sizing of titles on mobile

--- a/src/components/App/App.sass
+++ b/src/components/App/App.sass
@@ -50,3 +50,11 @@
 
 .Toastify__toast--error
 	background: $danger
+
+@media only screen and (max-width: 480px)
+	.Toastify__toast-container--bottom-center
+		bottom: 1em
+
+@media only screen and (max-width: 480px)
+	.Toastify__toast-container
+		left: 50%
