--- a/src/components/HoldingTankGraphs/HoldingTankGraphs.sass
+++ b/src/components/HoldingTankGraphs/HoldingTankGraphs.sass
@@ -5,6 +5,10 @@
     margin-left: auto
     margin-right: auto
 
+@media (max-width: 768px) // when mobile
+  .is-checkradio[type="radio"].is-medium + label
+    font-size: .85rem !important
+
 .is-checkradio[type="radio"]#temperature + label
   color: darkblue !important
 
