--- a/src/index.sass
+++ b/src/index.sass
@@ -133,6 +133,10 @@ html
 .title:not(:last-child)
   margin-bottom: 1rem
 
+@media (max-width: 768px) // when mobile
+  .title
+    font-size: 1.5rem
+
 .transparent
   opacity: 0
 
